tests/machine/x/cobol/break_continue.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:7: error: syntax error, unexpected NUMBERS
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:8: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:9: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:10: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:11: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:12: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:13: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:14: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:15: error: level number must begin with 01 or 77
/workspace/mochi/tests/machine/x/cobol/break_continue.cob:16: error: level number must begin with 01 or 77

