tests/machine/x/cobol/break_continue.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:34Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. BREAK-CONTINUE.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 NUMBERS-V.
           05 E1 PIC 9 VALUE 1.
           05 E2 PIC 9 VALUE 2.
           05 E3 PIC 9 VALUE 3.
           05 E4 PIC 9 VALUE 4.
           05 E5 PIC 9 VALUE 5.
           05 E6 PIC 9 VALUE 6.
           05 E7 PIC 9 VALUE 7.
           05 E8 PIC 9 VALUE 8.
           05 E9 PIC 9 VALUE 9.
       01 N PIC 9 VALUE 0.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM VARYING N FROM 1 BY 1 UNTIL N > 9
           IF FUNCTION MOD(N, 2) = 0
               CONTINUE
           END-IF
           IF N > 7
               EXIT PERFORM
           END-IF
           DISPLAY "odd number:" WITH NO ADVANCING
           DISPLAY " " WITH NO ADVANCING
           DISPLAY N
       END-PERFORM
       STOP RUN.
